--- a/pools_specific_EDA/Upper Pool 4/kmapper.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/kmapper.ipynb
@@ -147,6 +147,8 @@
     "    plot_title =  'LTRM: Epsilon '+ str(DBSCAN_EPSILON) + str(DBSCAN_EPSILON) + ', MIN_SAMPLES ' + str(DBSCAN_MIN_SAMPLES) \n",
     "    # plot_title = 'Pool 13, Summer 1993-1999; Epsilon ' + str(DBSCAN_EPSILON) + ', MIN_SAMPLES ' + str(DBSCAN_MIN_SAMPLES) \n",
     "    \n",
+    "\n",
+    "\n",
     "    layout = plot_layout(title = plot_title,  \n",
     "                         width = 620, height = 570,\n",
     "                         annotation_text = get_kmgraph_meta(mapper_summary),  \n",
@@ -172,132 +174,9 @@
     "    mapper.visualize(scomplex, color_values = color_values, color_function_name = color_function_name, \n",
     "                     path_html = html_output_path, lens = summary_variable, lens_names = continuous_variables)\n",
     "    \n",
-    "    return scomplex, X"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "source": [
-    "mapper_output_dict = {}\n",
-    "mapper_output_df = {}\n",
-    "\n",
-    "bin_list = [50, 75, 100]\n",
-    "overlap_list = [.1, .2, .3, .4, .5]\n",
-    "for i in bin_list:\n",
-    "    for j in overlap_list:\n",
-    "        title = 'NCUBES = ' + str(i) + ' PERC_OVERLAP = ' + str(j)\n",
-    "        print(title)\n",
-    "        scomplex, X = mapper_func(predicted_df, 10, 5, [i, i], [j, j])\n",
-    "        mapper_output_dict[title] = scomplex\n",
-    "        mapper_output_df[title] = X\n",
-    "\n",
-    "        \n",
     "    \n",
-    "        node_counts = []\n",
-    "        nodes = scomplex.get('nodes')\n",
-    "        keys = list(nodes.keys())\n",
-    "        for key in keys:\n",
-    "            node_counts.append(len(nodes.get(key)))\n",
-    "        plt.hist(node_counts, bins = 'auto')\n",
-    "        plt.title(title)\n",
-    "        plt.savefig(title + '.png')\n",
-    "        plt.close()\n",
-    "        \n",
     "\n",
-    "        \n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "NCUBES = 50 PERC_OVERLAP = 0.1\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926301\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 50 PERC_OVERLAP = 0.2\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926301\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 50 PERC_OVERLAP = 0.3\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926299\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 50 PERC_OVERLAP = 0.4\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926298\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 50 PERC_OVERLAP = 0.5\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926297\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 75 PERC_OVERLAP = 0.1\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926298\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 75 PERC_OVERLAP = 0.2\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926296\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 75 PERC_OVERLAP = 0.3\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926292\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 75 PERC_OVERLAP = 0.4\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926299\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 75 PERC_OVERLAP = 0.5\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.78517753129263\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 100 PERC_OVERLAP = 0.1\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926297\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 100 PERC_OVERLAP = 0.2\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926299\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 100 PERC_OVERLAP = 0.3\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926296\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 100 PERC_OVERLAP = 0.4\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926298\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n",
-      "NCUBES = 100 PERC_OVERLAP = 0.5\n",
-      "Primary variable:  SS\n",
-      "Corresponding component:  0.7851775312926299\n",
-      "Explained Variance:  [0.81970454 0.09756913]\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "source": [
-    "import json as js\n",
-    "json = js.dumps(mapper_output_dict)\n",
-    "f = open(\"PCA2_10_10_[100,100]_[30,30].json\",\"w\")\n",
-    "f.write(json)\n",
-    "f.close()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "source": [
-    "import pickle as pk\n",
-    "pickle = pk.dump(mapper_output_df, open(\"PCA2_10_10_[70,70]_[30,30]dfs.p\",\"wb\"))"
+    "    return scomplex, X"
    ],
    "outputs": [],
    "metadata": {}
@@ -306,24 +185,218 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "print(mapper_output_dict['500.1'])"
+    "def cluster_fun(dict_df, DBSCAN_EPSILON = 20, DBSCAN_MIN_SAMPLES = 1, N_CUBES = [7,7], PERC_OVERLAP = [.5,.5]):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    keys = list(dict_df.keys())\n",
+    "    print(keys)\n",
+    "    X = dict_df.get(keys[0])\n",
+    "    X = X[[\"PREDICTED_WDP\", \"PREDICTED_SECCHI\", \"PREDICTED_TEMP\", \"PREDICTED_DO\", \n",
+    "           \"PREDICTED_TURB\",\"PREDICTED_COND\", \"PREDICTED_VEL\", \"PREDICTED_TP\", \n",
+    "           \"PREDICTED_TN\", \"PREDICTED_SS\", \"PREDICTED_CHLcal\"]]\n",
+    "    if X.shape[0]<DBSCAN_MIN_SAMPLES:\n",
+    "        #print(X)\n",
+    "        print(\"Not enough data to cluster in \", keys, \"_size = \", X.shape[0])\n",
+    "        print(\"DBSCAN_MIN_SAMPLES\", DBSCAN_MIN_SAMPLES)\n",
+    "        return([DBSCAN_MIN_SAMPLES, X.shape[0]])\n",
+    "    \n",
+    "    \n",
+    "    db = DBSCAN(eps=20, min_samples=2).fit(X)\n",
+    "    # Number of clusters in labels, ignoring noise if present.\n",
+    "    labels = db.labels_\n",
+    "    n_clusters_ = len(set(labels)) - (1 if -1 in labels else 0)\n",
+    "    n_noise_ = list(labels).count(-1)\n",
+    "\n",
+    "    print('Estimated number of clusters: %d' % n_clusters_)\n",
+    "    print('Estimated number of noise points: %d' % n_noise_)\n",
+    "    \n",
+    "    return(db)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 129,
+   "source": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "source": [
+    "mapper_output_dict = {}\n",
+    "mapper_output_df = {}\n",
+    "\n",
+    "#epsilon_list = [5, 7.5, 10, 20, ]\n",
+    "#min_samples_list = [5, 10, ]\n",
+    "bin_list = [100]#, 75, 100]\n",
+    "overlap_list = [.3]#, .2, .3, .4, .5]\n",
+    "# for i in bin_list:\n",
+    "#   for j in overlap_list:\n",
+    "\n",
+    "#subset_perc = [.25, .5, 1]\n",
+    "#for i in subset_perc: \n",
+    "#data = predicted_df.sample(n = int(i * len(predicted_df)))\n",
+    "#title = str(i)+ '% SUBSET NCUBES = ' + str(100) + ' PERC_OVERLAP = ' + str(30)\n",
+    "#print(title)\n",
+    "scomplex, X = mapper_func(predicted_df, 10, 10, [100,100], [.3, .3])\n",
+    "mapper_output_dict['10_10_[100,100]_[.3,.3]'] = scomplex\n",
+    "mapper_output_df['10_10_[100,100]_[.3,.3]'] = X\n",
+    "\n",
+    "plotlyviz(scomplex, title = title, graph_layout = 'fr', dashboard = True)\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "    node_counts = []\n",
+    "    num_nodes = 0\n",
+    "    nodes = scomplex.get('nodes')\n",
+    "    links = scomplex.get('links')\n",
+    "\n",
+    "    print('NODE COUNT: ' + str(len(nodes)))\n",
+    "\n",
+    "print('1-SIMPLICES: ' + str(len(nodes) - len(links)) )\n",
+    "\n",
+    "node_keys = list(nodes.keys())\n",
+    "for key in node_keys:\n",
+    "    node_counts.append(len(nodes.get(key)))\n",
+    "\n",
+    "link_keys = list(links.keys())\n",
+    "two_simps = []\n",
+    "three_simps = []\n",
+    "four_simps = []\n",
+    "print(link_keys)\n",
+    "\n",
+    "for i in range(0, len(link_keys)):\n",
+    "    if len(link_keys[i]) == 1:\n",
+    "        two_simps.append(link_keys[key])\n",
+    "    if len(link_keys[i]) == 2:\n",
+    "        three_simps.append(link_keys[key])\n",
+    "    if len(link_keys[i]) == 3:\n",
+    "        four_simps.append(link_keys[key])\n",
+    "\n",
+    "print('2-SIMPLICES: ' + str(len(two_simps)))\n",
+    "print('3-SIMPLICES: ' + str(len(three_simps)))\n",
+    "print('4-SIMPLICES: ' + str(len(four_simps)))\n",
+    "# count number of complices\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.hist(node_counts, bins = 10)\n",
+    "plt.title(title)\n",
+    "plt.xlabel = ('Node count')\n",
+    "plt.ylabel = ('Frequency')\n",
+    "plt.savefig(title + '.png')\n",
+    "plt.close()\n",
+    "\"\"\"\n",
+    "\n",
+    "        \n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Primary variable:  SS\n",
+      "Corresponding component:  0.7851775312926293\n",
+      "Explained Variance:  [0.81970454 0.09756913]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "\"\\n    node_counts = []\\n    num_nodes = 0\\n    nodes = scomplex.get('nodes')\\n    links = scomplex.get('links')\\n\\n    print('NODE COUNT: ' + str(len(nodes)))\\n\\nprint('1-SIMPLICES: ' + str(len(nodes) - len(links)) )\\n\\nnode_keys = list(nodes.keys())\\nfor key in node_keys:\\n    node_counts.append(len(nodes.get(key)))\\n\\nlink_keys = list(links.keys())\\ntwo_simps = []\\nthree_simps = []\\nfour_simps = []\\nprint(link_keys)\\n\\nfor i in range(0, len(link_keys)):\\n    if len(link_keys[i]) == 1:\\n        two_simps.append(link_keys[key])\\n    if len(link_keys[i]) == 2:\\n        three_simps.append(link_keys[key])\\n    if len(link_keys[i]) == 3:\\n        four_simps.append(link_keys[key])\\n\\nprint('2-SIMPLICES: ' + str(len(two_simps)))\\nprint('3-SIMPLICES: ' + str(len(three_simps)))\\nprint('4-SIMPLICES: ' + str(len(four_simps)))\\n# count number of complices\\n\\n\\n\\n\\nplt.hist(node_counts, bins = 10)\\nplt.title(title)\\nplt.xlabel = ('Node count')\\nplt.ylabel = ('Frequency')\\nplt.savefig(title + '.png')\\nplt.close()\\n\""
+      ]
+     },
+     "metadata": {},
+     "execution_count": 133
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "source": [
+    "import json as js\n",
+    "json = js.dumps(mapper_output_dict)\n",
+    "f = open(\"10_10_[100,100]_[30,30].json\",\"w\")\n",
+    "f.write(json)\n",
+    "f.close()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "source": [
+    "import pickle as pk\n",
+    "pickle = pk.dump(mapper_output_df, open(\"PCA2_10_10_[100,100]_[30,30]dfs.p\",\"wb\"))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "source": [
+    "print(len(scomplex.get('links')))\n",
+    "print(len(scomplex.get('nodes')))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "292\n",
+      "425\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "source": [
     "num_nodes = [] # contains the number of nodes in each simplicies\n",
-    "nodes = scomplex.get('nodes')\n",
+    "nodes = scomplex.get('edges')\n",
     "keys = list(nodes.keys())\n",
     "count = 0\n",
     "for key in keys:\n",
     "   count += 1\n",
     "   num_nodes.append(len(nodes.get(key)))\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'keys'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-107-8e269e6660e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnum_nodes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# contains the number of nodes in each simplicies\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mnodes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscomplex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'edges'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mkeys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'keys'"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
