--- a/pools_specific_EDA/Upper Pool 4/tda_analysis.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/tda_analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -55,23 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "source": [
-    "jsonFilePath = \"../pools_specific_EDA/Upper Pool 4/PCA2_10_10_[100,100]_[30,30].json\"\n",
+    "jsonFilePath = \"PCA2_10_5_[100,100]_[30,30].json\"\n",
     "jsonFile = open(jsonFilePath, \"r\")\n",
     "jsonData = json.load(jsonFile) \n",
     "jsonFile.close()\n",
     "\n",
-    "dataFilePath = \"../pools_specific_EDA/Upper Pool 4/PCA2_10_10_[100,100]_[30,30]dfs.p\"\n",
+    "dataFilePath = \"PCA2_10_5_[100,100]_[30,30]dfs.p\"\n",
     "df_dict = pickle.load(open(dataFilePath, \"rb\"))\n",
-    "\n",
-    "variables = [\"PredictedWDP\", \"PredictedSECCHI\", \"PredictedTEMP\", \"PredictedDO\", \n",
-    "           \"PredictedTURB\", \"PredictedVEL\", \"PredictedTP\", #\"PREDICTED_COND\",\n",
-    "           \"PredictedTN\", \"PredictedSS\", \"PredictedCHLcal\"]\n",
-    "\n",
-    "variables = [\"PREDICTED_WDP\", \"PREDICTED_SECCHI\", \"PREDICTED_TEMP\", \"PREDICTED_DO\", \n",
-    "           \"PREDICTED_TURB\", \"PREDICTED_VEL\", \"PREDICTED_TP\", #\"PREDICTED_COND\",\n",
-    "           \"PREDICTED_TN\", \"PREDICTED_SS\", \"PREDICTED_CHLcal\"]\n",
     "\n",
     "variables = [\"WDP\", \"SECCHI\", \"TEMP\", \"DO\", \n",
     "           \"TURB\", \"VEL\", \"TP\", #\"COND\",\n",
@@ -105,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "source": [
     "def getSubdf(scomplex, shape, df):\n",
     "    \"\"\"\n",
@@ -447,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "allComplices = list(jsonData.keys())\n",
     "\n",
@@ -458,13 +450,25 @@
     "    nodes = scomplex.get('nodes')\n",
     "    print(\"Largest shape is: \", largestShape)\n",
     "    print(\"Number of nodes is: \", len(largestShape))\n",
+    "    \"\"\"\"\"\n",
     "    for node in largestShape:\n",
     "        summary = nodeDataSummary(node, scomplex,variables,df_dict.get(key))\n",
     "        if summary.loc['count'][0] > 5: # 5 is chosen arbitraily\n",
     "            print(\"Information for: \", node)\n",
-    "            display(summary)"
+    "            display(summary)\n",
+    "    \"\"\""
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Current Simplical Complex:  NCUBES = 100 PERC_OVERLAP = 30\n",
+      "Largest shape is:  ['cube173_cluster0', 'cube200_cluster1', 'cube141_cluster0', 'cube450_cluster1', 'cube161_cluster0', 'cube413_cluster1', 'cube30_cluster0', 'cube286_cluster1', 'cube450_cluster0', 'cube449_cluster1', 'cube105_cluster0', 'cube138_cluster0', 'cube204_cluster1', 'cube14_cluster0-cube25_cluster0', 'cube96_cluster0', 'cube32_cluster0', 'cube168_cluster0', 'cube15_cluster0-cube26_cluster0', 'cube140_cluster0', 'cube44_cluster0', 'cube136_cluster0', 'cube393_cluster5', 'cube141_cluster1', 'cube490_cluster4', 'cube16_cluster0', 'cube66_cluster0', 'cube54_cluster0', 'cube5_cluster0', 'cube91_cluster0', 'cube24_cluster0', 'cube366_cluster6', 'cube38_cluster0', 'cube142_cluster0', 'cube106_cluster1', 'cube6_cluster0', 'cube196_cluster0', 'cube51_cluster0', 'cube104_cluster1', 'cube143_cluster0', 'cube10_cluster0', 'cube449_cluster0', 'cube132_cluster0', 'cube137_cluster0', 'cube285_cluster2', 'cube311_cluster0', 'cube429_cluster0', 'cube470_cluster2', 'cube162_cluster1', 'cube50_cluster0', 'cube200_cluster0', 'cube412_cluster1', 'cube468_cluster0', 'cube430_cluster0', 'cube98_cluster0', 'cube143_cluster1', 'cube509_cluster3', 'cube61_cluster0', 'cube448_cluster1', 'cube260_cluster0', 'cube172_cluster3', 'cube227_cluster1', 'cube264_cluster1', 'cube66_cluster2', 'cube28_cluster0', 'cube17_cluster0', 'cube286_cluster0', 'cube413_cluster3', 'cube193_cluster0', 'cube259_cluster0', 'cube139_cluster0', 'cube104_cluster3', 'cube62_cluster0', 'cube263_cluster5', 'cube368_cluster2', 'cube171_cluster2', 'cube205_cluster1', 'cube340_cluster0', 'cube339_cluster2', 'cube289_cluster0', 'cube470_cluster3', 'cube67_cluster1', 'cube448_cluster0', 'cube338_cluster0', 'cube170_cluster1', 'cube392_cluster1', 'cube491_cluster4', 'cube413_cluster2', 'cube265_cluster0', 'cube338_cluster2', 'cube490_cluster0', 'cube311_cluster1', 'cube468_cluster3', 'cube227_cluster0', 'cube8_cluster0', 'cube469_cluster4', 'cube142_cluster4', 'cube107_cluster0-cube144_cluster0', 'cube263_cluster4', 'cube228_cluster0', 'cube266_cluster0', 'cube4_cluster0', 'cube198_cluster0', 'cube28_cluster1', 'cube226_cluster0', 'cube262_cluster0', 'cube258_cluster1', 'cube143_cluster2', 'cube192_cluster0', 'cube392_cluster2', 'cube40_cluster0', 'cube449_cluster5', 'cube232_cluster0', 'cube392_cluster0', 'cube510_cluster7', 'cube195_cluster4', 'cube470_cluster5', 'cube142_cluster2', 'cube130_cluster0', 'cube55_cluster0', 'cube203_cluster0', 'cube35_cluster0', 'cube18_cluster0', 'cube39_cluster0', 'cube285_cluster0', 'cube105_cluster3', 'cube337_cluster4', 'cube103_cluster1', 'cube450_cluster2', 'cube195_cluster0', 'cube172_cluster2', 'cube234_cluster0', 'cube267_cluster0', 'cube260_cluster1', 'cube288_cluster1', 'cube9_cluster0', 'cube42_cluster0', 'cube167_cluster0', 'cube29_cluster0', 'cube66_cluster1', 'cube169_cluster1', 'cube469_cluster2', 'cube367_cluster0', 'cube392_cluster4', 'cube201_cluster2', 'cube412_cluster0', 'cube52_cluster0', 'cube99_cluster1', 'cube285_cluster1', 'cube284_cluster0', 'cube430_cluster1', 'cube365_cluster0', 'cube430_cluster2', 'cube368_cluster0', 'cube287_cluster1', 'cube27_cluster0', 'cube93_cluster0', 'cube393_cluster0', 'cube7_cluster0', 'cube165_cluster0', 'cube413_cluster0', 'cube102_cluster0', 'cube468_cluster1', 'cube171_cluster1', 'cube365_cluster4', 'cube310_cluster1', 'cube31_cluster0', 'cube13_cluster0', 'cube264_cluster0', 'cube284_cluster1', 'cube229_cluster0', 'cube67_cluster0', 'cube65_cluster0', 'cube99_cluster0', 'cube367_cluster1', 'cube431_cluster0', 'cube135_cluster1', 'cube201_cluster1', 'cube258_cluster2', 'cube414_cluster0', 'cube205_cluster4', 'cube257_cluster1', 'cube53_cluster0', 'cube131_cluster0', 'cube312_cluster2', 'cube104_cluster2', 'cube137_cluster1', 'cube64_cluster0', 'cube134_cluster0', 'cube34_cluster0', 'cube393_cluster3', 'cube287_cluster0', 'cube238_cluster0', 'cube142_cluster3', 'cube193_cluster1', 'cube194_cluster0', 'cube67_cluster2', 'cube260_cluster4-cube288_cluster0', 'cube339_cluster1', 'cube394_cluster1', 'cube105_cluster1', 'cube106_cluster2', 'cube173_cluster3', 'cube43_cluster0', 'cube199_cluster0', 'cube169_cluster0', 'cube33_cluster0', 'cube263_cluster1', 'cube261_cluster0', 'cube65_cluster1', 'cube133_cluster0', 'cube312_cluster0', 'cube105_cluster2-cube142_cluster1', 'cube140_cluster1', 'cube468_cluster4', 'cube309_cluster0', 'cube17_cluster1', 'cube103_cluster0', 'cube469_cluster0', 'cube135_cluster0', 'cube394_cluster0', 'cube92_cluster0', 'cube288_cluster2', 'cube262_cluster2', 'cube60_cluster0', 'cube19_cluster0', 'cube56_cluster0', 'cube205_cluster0', 'cube164_cluster0', 'cube164_cluster2', 'cube309_cluster1', 'cube196_cluster2', 'cube141_cluster2', 'cube201_cluster0', 'cube172_cluster0', 'cube172_cluster1', 'cube366_cluster2', 'cube236_cluster0', 'cube263_cluster2', 'cube23_cluster0', 'cube58_cluster0', 'cube260_cluster5', 'cube449_cluster4', 'cube260_cluster2', 'cube37_cluster0', 'cube95_cluster0', 'cube366_cluster5', 'cube366_cluster0', 'cube163_cluster0', 'cube230_cluster0', 'cube41_cluster0', 'cube11_cluster0', 'cube170_cluster0', 'cube105_cluster4', 'cube36_cluster0', 'cube59_cluster0', 'cube430_cluster4', 'cube101_cluster0', 'cube200_cluster2', 'cube394_cluster3', 'cube430_cluster3', 'cube97_cluster0', 'cube339_cluster0', 'cube166_cluster0', 'cube236_cluster1', 'cube260_cluster3', 'cube202_cluster0', 'cube12_cluster0', 'cube366_cluster4', 'cube171_cluster0', 'cube337_cluster0', 'cube263_cluster3', 'cube57_cluster0', 'cube258_cluster0', 'cube197_cluster0', 'cube367_cluster2', 'cube235_cluster0', 'cube394_cluster2', 'cube338_cluster1', 'cube310_cluster0', 'cube231_cluster0', 'cube50_cluster1', 'cube257_cluster0', 'cube237_cluster0', 'cube68_cluster0', 'cube449_cluster2', 'cube259_cluster2', 'cube162_cluster0', 'cube337_cluster1', 'cube365_cluster3', 'cube229_cluster1', 'cube233_cluster0', 'cube365_cluster1', 'cube174_cluster0', 'cube447_cluster1', 'cube491_cluster3', 'cube368_cluster1', 'cube104_cluster0', 'cube259_cluster1', 'cube100_cluster0', 'cube94_cluster0', 'cube173_cluster4', 'cube63_cluster0']\n",
+      "Number of nodes is:  302\n"
+     ]
+    }
+   ],
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -652,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "source": [
     "def k_nearest_neighbors(df, neigh, point, k):\n",
     "    return neigh.kneighbors([list(df.loc[point])], k)[0].flatten()\n",
@@ -681,8 +685,10 @@
     "    print(\"Current Simplical Complex: \", key)\n",
     "    scomplex = jsonData.get(key)\n",
     "    scomplex['density'] = {}\n",
-    "    largestShape = clean_getShapes(scomplex)[0]\n",
-    "    print(\"Largest shape is: \", largestShape, \"\\n\")\n",
+    "    shapes = clean_getShapes(scomplex)\n",
+    "    print(\"NUMBER OF SHAPES: \" + len(clean_getShapes))\n",
+    "    largestShape = shapes[0]\n",
+    "    #print(\"Largest shape is: \", largestShape, \"\\n\")\n",
     "    largestShape_df = getSubdf(scomplex, largestShape, df_dict.get(key))\n",
     "    k = int((df_dict.get(key).shape[0] / 10) + 1)\n",
     "    for node_name in largestShape:\n",
